--- a/pages/ctf1.html
+++ b/pages/ctf1.html
@@ -23,8 +23,8 @@
             <h2 class="mb-5" style="margin-top: 20px;"><span class="text-danger">Cybersecurity</span>Challenge</h2>
         </header>
         <p class="text-content">The CyberSecurityChallenge Belgium is an annual competition designed to identify and develop cybersecurity talent in Belgium.
-            Participants, including students, professionals, and enthusiasts, compete in online qualifiers and a final round to showcase their skills in various cybersecurity domains.
-            The challenge serves as a platform for networking with industry professionals and raising awareness about cybersecurity. <br>
+            Participants, including students, professionals, and enthusiasts, compete in online qualifiers and a final round to showcase their skills in various cybersecurity domains.<br><br>
+            The challenge serves as a platform for networking with industry professionals and raising awareness about cybersecurity. <br><br>
             I took part of the 2022 only qualifiers and got the 157th place with my team "Katre"
             <div class="proof-container">
                 <h2>Proofs</h2> 
